pylibftdi changes
=================

0.7
 * support multiple attached devices
 * new API - separation between driver and device
0.6
 * same source now works on both Python2.6+ and Python3.
0.5
 * fix various bugs found by pyflakes
 * improve module organisation, while providing interface compatibility
0.4.1
 * fix release issue
0.4
 * fixed embarrassing bug which caused things not to work on Linux 
   (is now find_library('ftdi') instead of find_library('libftdi'))
 * lots of error checking, new FtdiError exception. Before it just
   tended to segfault if things weren't just-so.
 * get_error() is now get_error_string().  It's still early enough
   to change the API, and if I thought it was get_error_string
   multiple times when I wrote the error checking code, it probably
   should be the more natural thing.
0.3
 * added some examples
 * new Bus class in pylibftdi (though it probably belongs somewhere else)
 * first release on PyPI
0.2
 * fixed various bugs
 * added ftdi_fn and set_baudrate functions in Driver class
 * changed interface in BitBangDriver to direction/port properties
   rather than overriding the read/write functions, which are therefore
   still available as in the Driver class.
0.1
 * first release. Tested with libftdi 0.18 on Mac OS X 10.6 and Linux
  (stock EEEPC 701 Xandros Linux, Ubuntu 10.04)